<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        app:defaultValue="@string/pref_default_rolling_number"
        android:inputType="number"
        app:key="rolling_number"
        app:title="@string/pref_title_rolling_number"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:defaultValue="@string/pref_default_number_to_display"
        android:inputType="number"
        app:key="number_to_display"
        app:title="@string/pref_title_number_to_display"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:defaultValue="@string/pref_default_decimal_places"
        android:inputType="number"
        app:key="decimal_places"
        app:title="@string/pref_title_decimal_places"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="@string/pref_value_data_type_regular"
        android:entries="@array/pref_labels_data_type"
        android:entryValues="@array/pref_values_data_type"
        app:key="data_type"
        app:title="@string/pref_title_data_type"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
